new version, modified docs

--- a/lib/auto/Dancer/Plugin/DataFu/elements/table.tt
+++ b/lib/auto/Dancer/Plugin/DataFu/elements/table.tt
@@ -1,6 +1,10 @@
 <table id="grid_[% name %]" name="grid_[% name %]">
-[% header -%]
-[% navgiation %]
-[% rows %]
-[% navigation %]
+    <thead>
+        [% columns %]
+        [% header -%]
+    </thead>
+    <tbody>
+        [% rows %]
+        [% navigation %]
+    </tbody>
 </table>
